fix: [pd-512] overlay alignment in arabic site

--- a/src/component/SearchOverlay/SearchOverlay.style.scss
+++ b/src/component/SearchOverlay/SearchOverlay.style.scss
@@ -113,7 +113,7 @@
 
         &_isArabic {
             right: unset;
-            left: -170px;
+            left: -120px;
         }
     }
 
